<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">ClockLock</string>
    <string name="unknown">Unknown</string>
    <string name="cancel">Cancel</string>
    <string name="loading_indicator">Loading widget\u2026</string>
    <string name="menu_done">Done</string>
    <string name="about">About</string>
    <string name="advanced">Advanced</string>
    <string name="debugger">Enable debugging &amp; debug info</string>
    <string name="close">Close</string>
    <string name="widget_12_hours_format_h" translatable="false">h</string>
    <string name="widget_12_hours_format_no_ampm_m" translatable="false">:mm</string>
    <string name="widget_12_hours_format_m" translatable="false">:mm<font size="15">aa</font></string>
    <string name="widget_12_hours_format_ampm" translatable="false">a</string>
    <string name="widget_24_hours_format_h" translatable="false">kk</string>
    <string name="widget_24_hours_format_h_api_16" translatable="false">HH</string>
    <string name="widget_24_hours_format_m" translatable="false">:mm</string>
    <string name="weather_0">Tornado</string>
    <string name="weather_1">Tropical Storm</string>
    <string name="weather_2">Hurricane</string>
    <string name="weather_3">Severe Thunderstorms</string>
    <string name="weather_4">Thunderstorms</string>
    <string name="weather_5">Mixed Rain and Snow</string>
    <string name="weather_6">Mixed Rain and Sleet</string>
    <string name="weather_7">Mixed Snow and Sleet</string>
    <string name="weather_8">Freezing Drizzle</string>
    <string name="weather_9">Drizzle</string>
    <string name="weather_10">Freezing Rain</string>
    <string name="weather_11">Showers</string>
    <string name="weather_12">Showers</string>
    <string name="weather_13">Snow Flurries</string>
    <string name="weather_14">Light Snow Showers</string>
    <string name="weather_15">Blowing Snow</string>
    <string name="weather_16">Snow</string>
    <string name="weather_17">Hail</string>
    <string name="weather_18">Sleet</string>
    <string name="weather_19">Dust</string>
    <string name="weather_20">Foggy</string>
    <string name="weather_21">Haze</string>
    <string name="weather_22">Smoky</string>
    <string name="weather_23">Blustery</string>
    <string name="weather_24">Windy</string>
    <string name="weather_25">Cold</string>
    <string name="weather_26">Cloudy</string>
    <string name="weather_27">Mostly Cloudy</string>
    <string name="weather_28">Mostly Cloudy</string>
    <string name="weather_29">Partly Cloudy</string>
    <string name="weather_30">Partly Cloudy</string>
    <string name="weather_31">Clear</string>
    <string name="weather_32">Sunny</string>
    <string name="weather_33">Fair</string>
    <string name="weather_34">Fair</string>
    <string name="weather_35">Mixed Rain and Hail</string>
    <string name="weather_36">Hot</string>
    <string name="weather_37">Isolated Thunderstorms</string>
    <string name="weather_38">Scattered Thunderstorms</string>
    <string name="weather_39">Scattered Thunderstorms</string>
    <string name="weather_40">Scattered Showers</string>
    <string name="weather_41">Heavy Snow</string>
    <string name="weather_42">Scattered Snow Showers</string>
    <string name="weather_43">Heavy Snow</string>
    <string name="weather_44">Partly Cloudy</string>
    <string name="weather_45">Thundershowers</string>
    <string name="weather_46">Snow Showers</string>
    <string name="weather_47">Isolated Thundershowers</string>
    <string name="weather_1001">Dark Sun</string>
    <string name="weather_1002">Dark Sun, Light Clouds</string>
    <string name="weather_1003">Dark Sun, Partly Cloudy</string>
    <string name="weather_1020">Sleet, Thunder, Sunny</string>
    <string name="weather_1021">Snow, Thunder, Sunny</string>
    <string name="weather_1129">Dark Sun, Heavy Snow, Thunder</string>
    <string name="weather_3200" translatable="false"></string>
    <string name="weather_kph">km/h</string>
    <string name="weather_mph">mph</string>
    <string name="weather_hpa">hPa</string>
    <string name="weather_N">N</string>
    <string name="weather_NE">NE</string>
    <string name="weather_E">E</string>
    <string name="weather_SE">SE</string>
    <string name="weather_S">S</string>
    <string name="weather_SW">SW</string>
    <string name="weather_W">W</string>
    <string name="weather_NW">NW</string>
    <string name="weather_no_data">No data</string>
    <string name="weather_tap_to_refresh">Tap to refresh</string>
    <string name="weather_tap_to_refresh_weather">Tap to refresh weather</string>
    <string name="weather_refreshing">Refreshing</string>
    <string name="weather_last_sync_just_now">Just now</string>
    <string name="weather_cannot_reach_provider">Can\'t reach %s at the moment</string>
    <string name="weather_refresh_manual">Manual</string>
    <string name="weather_refresh_15min">15 minutes</string>
    <string name="weather_refresh_30min">30 minutes</string>
    <string name="weather_refresh_60min">60 minutes</string>
    <string name="weather_refresh_2hrs">2 hours</string>
    <string name="weather_refresh_4hrs">4 hours</string>
    <string name="weather_refresh_6hrs">6 hours</string>
    <string name="weather_refresh_8hrs">8 hours</string>
    <string name="clock_category">Clock and alarm</string>
    <string name="weather_category">Weather panel</string>
    <string name="calendar_category">Calendar events</string>
    <string name="general_category">General</string>
    <string name="display_category">Display</string>
    <string name="use_digital_clock_title">Use Digital clock</string>
    <string name="use_digital_clock_summary">Select to toggle between the Digital and the Analog clock</string>
    <string name="clock_font_title">Bold hours</string>
    <string name="clock_font_minutes_title">Bold minutes</string>
    <string name="clock_font_date_title">Bold date and alarm</string>
    <string name="show_alarm_title">Show next alarm</string>
    <string name="clock_am_pm_title">Show AM/PM indicator</string>
    <string name="weather_api_key">Weather API Key</string>
    <string name="weather_enabled">Enabled</string>
    <string name="weather_enable">Display weather</string>
    <string name="weather_source_title">Weather source</string>
    <string name="weather_source_openweathermap" translatable="false">OpenWeatherMap</string>
    <string name="weather_source_weatherunderground" translatable="false">Weather Underground</string>
    <string name="weather_source_yr_no" translatable="false">yr.no</string>
    <string name="weather_use_custom_location">Use custom location</string>
    <string name="weather_geolocated">Geolocated using network</string>
    <string name="weather_custom_location_dialog_title">Enter location</string>
    <string name="weather_custom_location_hint">City, State/Country</string>
    <string name="weather_custom_location_title">Location</string>
    <string name="weather_show_location_title">Show location</string>
    <string name="weather_show_timestamp_title">Show timestamp</string>
    <string name="weather_refresh_interval">Update interval</string>
    <string name="weather_use_metric">Use metric</string>
    <string name="weather_retrieve_location_dialog_title">Cannot retrieve location!</string>
    <string name="weather_retrieve_location_dialog_message">Network geolocation is disabled.\n\nSet a custom location or enable network location</string>
    <string name="weather_retrieve_location_dialog_enable_button">Enable</string>
    <string name="weather_invert_lowhigh">Invert low/high temperatures</string>
    <string name="weather_progress_title">Verifying location</string>
    <string name="weather_alternate_icons_title">Use color icons</string>
    <string name="weather_alternate_icons_summary">Select to toggle between the default (Color) and the alternate (White) icons</string>
    <string name="weather_show_when_minimized_title">Show when minimized</string>
    <string name="weather_show_when_minimized_summary">Display summary weather information when the widget is minimized</string>
    <string name="weather_select_location">Select location</string>
    <string name="weather_use_sensors">Use device sensors</string>
    <string name="calendar_title">Display next event</string>
    <string name="calendars_title">Event calendars</string>
    <string name="calendars_summary">Find events from these calendars</string>
    <string name="calendars_none_found_summary">No calendars found</string>
    <string name="calendar_reminders_only_title">Reminders only</string>
    <string name="calendar_reminders_only_summary">Show only events with reminders</string>
    <string name="calendar_hide_allday_title">Hide all-day events</string>
    <string name="calendar_icon_title">Calendar icon</string>
    <string name="calendar_separator_title">Calendar separator</string>
    <string name="calendar_lookahead_title">Event lookahead</string>
    <string name="calendar_show_location_title">Event location</string>
    <string name="calendar_show_description_title">Event description</string>
    <string name="calendar_upcoming_events_category">Upcoming events</string>
    <string name="calendar_highlight_upcoming_events_title">Highlight events</string>
    <string name="calendar_highlight_upcoming_events_summary">Highlight the current day\'s events and, after 8pm, also the next day\'s events</string>
    <string name="calendar_highlight_upcoming_events_bold">Bold font</string>
    <string name="font_color">Font color</string>
    <string name="font_color_alarm">Alarm font color</string>
    <string name="font_color_timestamp">Timestamp font color</string>
    <string name="font_color_calendar_details">Details font color</string>
    <string name="background_color">Background color</string>
    <string name="background_transparency">Background transparency</string>
    <string name="calendar_lookahead_3hrs">3 hours</string>
    <string name="calendar_lookahead_6hrs">6 hours</string>
    <string name="calendar_lookahead_12hrs">12 hours</string>
    <string name="calendar_lookahead_today">Today</string>
    <string name="calendar_lookahead_1day">1 day</string>
    <string name="calendar_lookahead_3days">3 days</string>
    <string name="calendar_lookahead_1wk">1 week</string>
    <string name="calendar_lookahead_2wks">2 weeks</string>
    <string name="calendar_lookahead_4wks">4 weeks</string>
    <string name="calendar_metadata_none">Do not show</string>
    <string name="calendar_metadata_first_line">Show first line</string>
    <string name="calendar_metadata_all">Show all</string>
    <string name="transparent">Transparent</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="white">White</string>
    <string name="grey">Grey</string>
    <string name="black">Black</string>
    <string name="holo_blue_light">Light blue</string>
    <string name="holo_green_light">Light green</string>
    <string name="holo_red_light">Light red</string>
    <string name="holo_blue_dark">Dark blue</string>
    <string name="holo_green_dark">Dark green</string>
    <string name="holo_red_dark">Dark red</string>
    <string name="holo_purple">Purple</string>
    <string name="holo_orange_light">Light orange</string>
    <string name="holo_orange_dark">Dark orange</string>
    <string name="holo_blue_bright">Bright blue</string>
    <string name="weather_icon_set_title">Icon set</string>
    <string name="weather_icons_standard">Colored</string>
    <string name="weather_icons_monochrome">Monochrome</string>
    <string name="weather_icons_vclouds" translatable="false">VClouds</string>
    <string name="icon_set_selection_get_more">Get more\u2026</string>
    <string name="icon_set_store_filter" translatable="false">Chronus Weather Icons</string>
</resources>