<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2015 The CyanogenMod Project (DvTonder)
    Copyright (C) 2016 Benoit Touchette

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<com.draekko.traypreferences.TrayPreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    custom:key="clock_settings"
    custom:title="@string/clock_category">

    <com.draekko.traypreferences.TrayPreferenceCategory
        custom:title="@string/general_category">

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="clock_digital"
            custom:title="@string/use_digital_clock_title"
            custom:summary="@string/use_digital_clock_summary"
            custom:defaultValue="true" />

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="clock_show_alarm"
            custom:title="@string/show_alarm_title"
            custom:defaultValue="true" />
    </com.draekko.traypreferences.TrayPreferenceCategory>

    <com.draekko.traypreferences.TrayPreferenceCategory custom:title="@string/display_category">

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="clock_font"
            custom:title="@string/clock_font_title"
            custom:dependency="clock_digital"
            custom:defaultValue="false" />

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="clock_font_minutes"
            custom:title="@string/clock_font_minutes_title"
            custom:dependency="clock_digital"
            custom:defaultValue="false" />

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="clock_am_pm_indicator"
            custom:title="@string/clock_am_pm_title"
            custom:dependency="clock_digital"
            custom:defaultValue="false" />

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="clock_font_date"
            custom:title="@string/clock_font_date_title"
            custom:defaultValue="true" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="clock_font_color"
            custom:title="@string/font_color"
            custom:dependency="clock_digital"
            custom:defaultValue="#ffffffff"
            custom:entries="@array/font_color_entries"
            custom:entryValues="@array/font_color_values" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="clock_alarm_font_color"
            custom:title="@string/font_color_alarm"
            custom:defaultValue="#80ffffff"
            custom:entries="@array/font_color_entries"
            custom:entryValues="@array/font_color_values" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="clock_background_color"
            custom:title="@string/background_color"
            custom:summary="%s"
            custom:defaultValue="#ff000000"
            custom:entries="@array/font_color_entries"
            custom:entryValues="@array/font_color_values" />

        <!-- Background transparency selection -->
        <com.draekko.clocklock.preference.BackgroundTransparency
                custom:key="clock_background_transparency"
                custom:title="@string/background_transparency"
                custom:dialogTitle="@string/background_transparency"
                custom:persistent="false" />

    </com.draekko.traypreferences.TrayPreferenceCategory>

</com.draekko.traypreferences.TrayPreferenceScreen>
