<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2015 The CyanogenMod Project (DvTonder)
    Copyright (C) 2016 Benoit Touchette

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<com.draekko.traypreferences.TrayPreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    custom:key="calendar_settings"
    custom:title="@string/calendar_category">

    <com.draekko.traypreferences.TrayPreferenceCategory 
        custom:title="@string/general_category">

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="show_calendar"
            custom:title="@string/calendar_title"
            custom:defaultValue="false" />

        <com.draekko.traypreferences.TrayMultiSelectListPreference
            custom:key="calendar_list"
            custom:dependency="show_calendar"
            custom:dialogTitle="@string/calendars_title"
            custom:title="@string/calendars_title"
            custom:summary="@string/calendars_summary" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="calendar_lookahead"
            custom:dependency="show_calendar"
            custom:summary="%s"
            custom:dialogTitle="@string/calendar_lookahead_title"
            custom:title="@string/calendar_lookahead_title"
            custom:defaultValue="1209600000"
            custom:entries="@array/calendar_lookahead_entries"
            custom:entryValues="@array/calendar_lookahead_values" />

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="calendar_reminders_only"
            custom:dependency="show_calendar"
            custom:title="@string/calendar_reminders_only_title"
            custom:summary="@string/calendar_reminders_only_summary"
            custom:defaultValue="false" />

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="calendar_hide_allday"
            custom:dependency="show_calendar"
            custom:title="@string/calendar_hide_allday_title"
            custom:defaultValue="false" />

    </com.draekko.traypreferences.TrayPreferenceCategory>

    <com.draekko.traypreferences.TrayPreferenceCategory
        custom:title="@string/display_category">

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="calendar_icon"
            custom:dependency="show_calendar"
            custom:title="@string/calendar_icon_title"
            custom:defaultValue="true" />

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="calendar_separator"
            custom:dependency="show_calendar"
            custom:title="@string/calendar_separator_title"
            custom:defaultValue="true" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="calendar_background_color"
            custom:title="@string/background_color"
            custom:dependency="show_calendar"
            custom:defaultValue="#00000000"
            custom:entries="@array/calendar_bg_entries"
            custom:entryValues="@array/calendar_bg_values" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="calendar_show_location"
            custom:dependency="show_calendar"
            custom:summary="%s"
            custom:defaultValue="0"
            custom:dialogTitle="@string/calendar_show_location_title"
            custom:title="@string/calendar_show_location_title"
            custom:entries="@array/calendar_show_event_metadata_entries"
            custom:entryValues="@array/calendar_show_event_metadata_values" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="calendar_show_description"
            custom:dependency="show_calendar"
            custom:summary="%s"
            custom:defaultValue="0"
            custom:dialogTitle="@string/calendar_show_description_title"
            custom:title="@string/calendar_show_description_title"
            custom:entries="@array/calendar_show_event_metadata_entries"
            custom:entryValues="@array/calendar_show_event_metadata_values" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="calendar_font_color"
            custom:title="@string/font_color"
            custom:dependency="show_calendar"
            custom:defaultValue="#ffffffff"
            custom:entries="@array/font_color_entries"
            custom:entryValues="@array/font_color_values" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="calendar_details_font_color"
            custom:title="@string/font_color_calendar_details"
            custom:dependency="show_calendar"
            custom:defaultValue="#80ffffff"
            custom:entries="@array/font_color_entries"
            custom:entryValues="@array/font_color_values" />
    </com.draekko.traypreferences.TrayPreferenceCategory>

    <com.draekko.traypreferences.TrayPreferenceCategory
        custom:title="@string/calendar_upcoming_events_category">

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="calendar_highlight_upcoming_events"
            custom:dependency="show_calendar"
            custom:title="@string/calendar_highlight_upcoming_events_title"
            custom:summary="@string/calendar_highlight_upcoming_events_summary"
            custom:defaultValue="false" />

        <com.draekko.traypreferences.TraySwitchPreference
            custom:key="calendar_highlight_upcoming_events_bold"
            custom:dependency="calendar_highlight_upcoming_events"
            custom:title="@string/calendar_highlight_upcoming_events_bold"
            custom:defaultValue="false" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="calendar_highlight_upcoming_events_font_color"
            custom:title="@string/font_color"
            custom:dependency="calendar_highlight_upcoming_events"
            custom:defaultValue="#ffffffff"
            custom:entries="@array/font_color_entries"
            custom:entryValues="@array/font_color_values" />

        <com.draekko.traypreferences.TrayListPreference
            custom:key="calendar_highlight_upcoming_events_details_font_color"
            custom:title="@string/font_color_calendar_details"
            custom:dependency="calendar_highlight_upcoming_events"
            custom:defaultValue="#80ffffff"
            custom:entries="@array/font_color_entries"
            custom:entryValues="@array/font_color_values" />

    </com.draekko.traypreferences.TrayPreferenceCategory>

</com.draekko.traypreferences.TrayPreferenceScreen>
